--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -52,6 +53,12 @@
         tools:targetApi="m" >
         <activity
             android:name=".driverregister.DriverProfileRegisterActivity"
+            android:theme="@style/OnePayTaxiTheme"
+            android:exported="false" />
+
+        <activity
+            android:name=".driverregister.AddFleetActivity"
+            android:theme="@style/OnePayTaxiTheme"
             android:exported="false" />
         <activity
             android:name=".driverregister.OtpVerificationActivity"
@@ -255,6 +262,11 @@
             android:name=".service.ForegroundEnablingService"
             android:enabled="true"
             android:exported="false" />
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="channel_trip_alert_v2" />
+
         <!--
  <service android:name=".MyFirebaseInstanceIDService">
             <intent-filter>
@@ -262,8 +274,15 @@
             </intent-filter>
         </service>
         -->
-        <service
-            android:name=".service.FirebaseService"
+<!--        <service-->
+<!--            android:name=".service.FirebaseService"-->
+<!--            android:exported="false" >-->
+<!--            <intent-filter>-->
+<!--                <action android:name="com.google.firebase.MESSAGING_EVENT" />-->
+<!--            </intent-filter>-->
+<!--        </service>-->
+  <service
+            android:name=".pushmessage.FirebasePushMessage"
             android:exported="false" >
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
@@ -279,6 +298,13 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+
+        <service
+            android:name=".pushmessage.TripAlertService"
+            android:exported="false"
+            android:foregroundServiceType="mediaPlayback|location"
+            tools:ignore="ForegroundServicePermission" />
     </application>
 
 </manifest>
